@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-11-06T02:12:53Z",
+  "timestamp" : "2022-11-06T16:31:02Z",
   "count_outdated" : 868,
   "uniques_outdated" : 455,
-  "count" : 890,
+  "count" : 889,
   "uniques" : 468,
   "clones" : [
     {
       "timestamp": "2022-10-23T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
